// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createAlertPolicyEntity should convert to entity 1`] = `
{
  "_class": [
    "Policy",
  ],
  "_key": "projects/j1-gc-integration-dev-v2/alertPolicies/9246450381922925470",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "combiner": "OR",
        "creationRecord": {
          "mutateTime": "2021-02-02T16:18:23.127595226Z",
          "mutatedBy": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
        },
        "displayName": "Example Alert Policy",
        "enabled": true,
        "mutationRecord": {
          "mutateTime": "2021-02-02T16:18:23.127595226Z",
          "mutatedBy": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
        },
        "name": "projects/j1-gc-integration-dev-v2/alertPolicies/9246450381922925470",
      },
    },
  ],
  "_type": "google_monitoring_alert_policy",
  "conditionFilters": undefined,
  "content": "",
  "createdOn": 1612282703127,
  "displayName": "Example Alert Policy",
  "enabled": true,
  "name": "Example Alert Policy",
  "summary": "Alert policy that is triggered based on some metric",
  "title": "Alert policy",
  "updatedOn": 1612282703127,
  "webLink": "https://console.cloud.google.com/monitoring/alerting/policies/9246450381922925470?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createAlertPolicyEntity should convert to entity with conditionFilters array 1`] = `
{
  "_class": [
    "Policy",
  ],
  "_key": "projects/j1-gc-integration-dev-v2/alertPolicies/9246450381922925470",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "combiner": "OR",
        "conditions": [
          {
            "conditionThreshold": {
              "aggregations": [
                {
                  "alignmentPeriod": "300s",
                  "perSeriesAligner": "ALIGN_RATE",
                },
              ],
              "comparison": "COMPARISON_GT",
              "duration": "0s",
              "filter": "metric.type="logging.googleapis.com/user/my-example-metric" AND resource.type="metric"",
              "trigger": {
                "count": 1,
              },
            },
            "displayName": "test condition",
            "name": "projects/j1-gc-integration-dev-v2/alertPolicies/9246450381922925470/conditions/9246450381922923601",
          },
        ],
        "creationRecord": {
          "mutateTime": "2021-02-02T16:18:23.127595226Z",
          "mutatedBy": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
        },
        "displayName": "Example Alert Policy",
        "enabled": true,
        "mutationRecord": {
          "mutateTime": "2021-02-02T16:18:23.127595226Z",
          "mutatedBy": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
        },
        "name": "projects/j1-gc-integration-dev-v2/alertPolicies/9246450381922925470",
      },
    },
  ],
  "_type": "google_monitoring_alert_policy",
  "conditionFilters": [
    "metric.type="logging.googleapis.com/user/my-example-metric" AND resource.type="metric"",
  ],
  "content": "",
  "createdOn": 1612282703127,
  "displayName": "Example Alert Policy",
  "enabled": true,
  "name": "Example Alert Policy",
  "summary": "Alert policy that is triggered based on some metric",
  "title": "Alert policy",
  "updatedOn": 1612282703127,
  "webLink": "https://console.cloud.google.com/monitoring/alerting/policies/9246450381922925470?project=j1-gc-integration-dev-v2",
}
`;
